<resources>
    <string name="app_name">大ざっぱ支出管理</string>

    <!---->
    <string name="banner_ad_unit_id">ca-app-pub-1882812461462801/1275737084</string>
    <!---->
    <!-- Test
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    -->

    <string name="captionRegistration">登録</string>
    <string name="captionOk">OK</string>
    <string name="captionCancel">キャンセル</string>
    <string name="captionBack">戻る</string>

    <!-- Main -->
    <string name="buttonSetting">設定</string>
    <string name="buttonCalc">集計</string>
    <string name="buttonInput">入力</string>

    <string name="labelLastMonth">先月度</string>
    <string name="labelCurrentMonth">今月度</string>

    <!-- 支出額入力ダイアログ -->
    <string name="empty" />
    <string name="dialogPostTitle">の取引入力</string>
    <string name="labelDate">日付</string>
    <string name="labelAmount">金額</string>
    <string name="labelYen">円</string>
    <string name="labelMemo">備考</string>
    <string name="captionErase">この取引を削除する</string>

    <string name="confirmEraseTitle">削除の確認</string>
    <string name="confirmErase">この取引を削除します。よろしいですか？</string>

    <!-- 履歴表示画面 -->
    <string name="listLabelDate">日付</string>
    <string name="listLabelAmount">金額</string>
    <string name="listLabelMemo">備考</string>
    <string name="infoNoData">取引データがありません。</string>

    <!-- 設定メニュー -->
    <string name="menuReset">リセット（全データ削除）</string>
    <string name="settingMenuAccount">科目の設定</string>

    <!-- 科目選択ダイアログ -->
    <string name="selectAccountDialogTitle">編集する科目を選んでください</string>

    <!-- 科目設定ダイアログ -->
    <string name="labelAccountName">名称</string>
    <string name="labelClosingDay">締め日</string>

    <!-- リセット確認ダイアログ -->
    <string name="title_reset_dialog">おおざっぱ支出管理のリセット</string>
    <string name="summary_reset">このアプリのすべてのデータを削除します。実行すると元に戻すことはできません。\n</string>
    <string name="caption_reset_check">リセットを実行します</string>
    <string name="reset_message">このアプリのデータをリセットしました。</string>

</resources>
