<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialogPadding"
    tools:context="biz.riverone.ohzappa.views.HistoryFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:paddingTop="@dimen/dialogPadding"
        android:paddingBottom="@dimen/dialogPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewMonthlyTitle"
                android:textSize="@dimen/textSizeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewPeriod"
                android:textSize="@dimen/textSizeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/textViewTotal"
            android:textSize="@dimen/textSizeXLarge"
            android:gravity="end|bottom"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/dialogPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/listLabelDate"
                android:paddingStart="@dimen/controllerPadding"
                android:paddingLeft="@dimen/controllerPadding"
                android:paddingEnd="@dimen/controllerPadding"
                android:paddingRight="@dimen/controllerPadding"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/listLabelAmount"
                android:gravity="end"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/listLabelMemo"
                android:gravity="start"
                android:paddingStart="@dimen/controllerPadding"
                android:paddingLeft="@dimen/controllerPadding"
                android:paddingEnd="@dimen/controllerPadding"
                android:paddingRight="@dimen/controllerPadding"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <FrameLayout
            android:background="@drawable/border"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewNoData"
                android:text="@string/infoNoData"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
